<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.PlayerFragment">

    <ImageView
        android:id="@+id/albumPhotoIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/empty"
        android:src="@drawable/album_temp"
        app:layout_constraintBottom_toTopOf="@id/titleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:singleLine="true"
        android:text="@string/no_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/artistTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumPhotoIV" />

    <TextView
        android:id="@+id/artistTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/no_artist"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/progressSB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV" />

    <SeekBar
        android:id="@+id/progressSB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:progressTint="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@id/seekBarLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artistTV" />

    <LinearLayout
        android:id="@+id/seekBarLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/buttonsLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressSB">

        <TextView
            android:id="@+id/elapsedTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_time" />

        <TextView
            android:id="@+id/totalTimeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_time"
            android:textAlignment="textEnd" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekBarLL">

        <ImageButton
            android:id="@+id/previousIB"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_btn"
            android:contentDescription="@string/empty"
            android:scaleType="fitXY"
            android:src="@drawable/ic_round_skip_previous_24" />

        <ImageButton
            android:id="@+id/playIB"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_btn"
            android:contentDescription="@string/empty"
            android:scaleType="fitXY"
            android:src="@drawable/ic_round_play_circle_24" />

        <ImageButton
            android:id="@+id/nextIB"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_btn"
            android:contentDescription="@string/empty"
            android:scaleType="fitXY"
            android:src="@drawable/ic_round_skip_next_24" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>